--- a/less/utilities.less
+++ b/less/utilities.less
@@ -74,6 +74,10 @@ background-image: url("data:image/svg+xml,%3Csvg width='360' height='360' viewBo
     color: #666;
 }
 
+.text-lg {
+    font-size: 1.5rem;
+}
+
 .fadeIn {
     opacity: 0;
 }
