--- a/less/styles.less
+++ b/less/styles.less
@@ -76,6 +76,28 @@ ul {
 
 }
 
+.multi-title {
+    position: relative;
+}
+
+.bg-title {
+    color: @color-title-background;
+    font-size: 96px;
+    line-height: 96px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.fg-title {
+    color: @color-title-foreground;
+    display: table;
+    font-size: 36px;
+    line-height: 36px;
+    margin: 0 auto;
+    position: relative;
+    top: -64px;
+}
+
 .title {
     font-size: 3.6rem;
 }
@@ -91,4 +113,8 @@ ul {
 .module {
     position: relative;
     z-index: 1;
+}
+
+.content {
+    max-width: 800px;
 }
