--- a/less/utilities.less
+++ b/less/utilities.less
@@ -82,6 +82,14 @@ background-image: url("data:image/svg+xml,%3Csvg width='360' height='360' viewBo
     opacity: 0;
 }
 
+.montserrat {
+    font-family: 'Montserrat Light', sans-serif;
+}
+
+.container-alt {
+    max-width: 800px;
+}
+
 
 /* Bootstrap Overrides */
 .p-y-4 {
