--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,10 @@
 @color-text-secondary: #bb8462;
 @color-text-tertiary: #b6bea8;
 @color-text-muted: rgba(0, 0, 0, 0.6);
+@color-text-btn: #fff;
+
+@color-title-background: #eee;
+@color-title-foreground: #161d27;
 
 @color-bg-primary: #ebebe8;
 @color-bg-secondary: #ebebe8;
