--- a/less/buttons.less
+++ b/less/buttons.less
@@ -20,21 +20,34 @@
 
 .btn {
     .border-radius(2px);
-    font-size: 12px;
+    font-family: "Montserrat Light", sans-serif;
+    font-size: .8rem;
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     padding: .5rem 1.2rem;
     position: relative;
-    text-transform: uppercase;
+}
+
+.btn-lg {
+    font-size: 1.2rem;
+    padding: 1rem 2.5rem;
 }
 
 .btn-primary {
-    .btn-bg(hsla(82,14%,70%,.5), @color-text-primary);
+    .btn-bg(@color-brand-primary, @color-text-btn);
+}
+
+.btn-primary {
+    .btn-bg(@color-brand-secondary, @color-text-btn);
 }
 
 .btn-icon {
 
     padding-right: 30px;
+
+    &.btn-lg {
+        padding-right: 45px;
+    }
 
     &:after {
         font-family: "FontAwesome", sans-serif;
