--- a/less/components.less
+++ b/less/components.less
@@ -57,3 +57,12 @@
     }
 
 }
+
+.contact-form {
+
+    input {
+        background-color: #f5f9fc;
+        border: solid 1px #a7bfda;    
+    }
+
+}
