--- a/less/clients.less
+++ b/less/clients.less
@@ -26,8 +26,20 @@
         width: 100%;
         z-index: 1;
 
+        &.cbh {
+            background-image: url('../images/clients/cbh-bg.jpg');
+        }
+        
+        &.kingspan {
+            background-image: url('../images/clients/kingspan-bg.jpg');
+        }
+
         &.sport-wales {
             background-image: url('../images/clients/sport-wales-bg.jpg');
+        }
+
+        &.volvo {
+            background-image: url('../images/clients/volvo-bg.jpg');
         }
 
     }
