--- a/less/components.less
+++ b/less/components.less
@@ -46,7 +46,7 @@
 
         li {
 
-            border-color: @color-border-light;
+            border-color: @color-brand-secondary;
 
             &.active {
                 background-color: @color-brand-secondary;
