--- a/less/styles.less
+++ b/less/styles.less
@@ -6,6 +6,7 @@
 @import 'buttons';
 @import 'header';
 @import 'footer';
+@import 'headline';
 @import 'clients';
 @import 'rocket';
 @import 'map';
@@ -116,5 +117,12 @@ ul {
 }
 
 .content {
+
+    font-size: 1.3rem;
     max-width: 800px;
+
+    p {
+        margin-bottom: 2rem;
+    }
+
 }
