--- a/less/footer.less
+++ b/less/footer.less
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #3C3C3C;
+    background-color: @color-brand-secondary;
     bottom: 0;
     color: #fff;
     left: 0;
