--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,8 @@
 
 @color-title-background: #eee;
 @color-title-foreground: #161d27;
+@color-title-background-grey: #ccc;
+@color-title-background-inverse: #313a43;
 
 @color-bg-primary: #ebebe8;
 @color-bg-secondary: #ebebe8;
